--- a/Note/03机器学习介绍与线性模型.md
+++ b/Note/03机器学习介绍与线性模型.md
@@ -1,4 +1,4 @@
-# 机器学习线性回归与分类问题
+# 机器学习介绍与线性模型
 
 <center>
   by <a href="https://github.com/zhuozhiyongde">Arthals</a> / GPT4 / Claude 3 Opus
@@ -49,13 +49,13 @@ $$
 我们将之转为矩阵形式：
 
 $$
-\mathbf{A}=\left[\begin{matrix}{X_{1}}\\{\vdots}\\{X_{n}}\\\end{matrix}\right]=\left[\begin{matrix}{X_{1}^{(1)}}&{\dots}&{X_{1}^{(p)}}\\{\vdots}&{\ddots}&{\vdots}\\{X_{n}^{(1)}}&{\dots}&{X_{n}^{(p)}}\\\end{matrix}\right],\quad Y=\left[\begin{array}{c}{y_{1}}\\{\vdots}\\{y_{n}}\end{array}\right],\quad \beta=\left[\begin{array}{c}{w_{1}}\\{\vdots}\\{w_{n}}\end{array}\right]
+\mathbf{A}=\left[\begin{matrix}{X_{1}}\\{\vdots}\\{X_{n}}\\\end{matrix}\right]=\left[\begin{matrix}{X_{1}^{(1)}}&{\dots}&{X_{1}^{(p)}}\\{\vdots}&{\ddots}&{\vdots}\\{X_{n}^{(1)}}&{\dots}&{X_{n}^{(p)}}\\\end{matrix}\right],\quad Y=\left[\begin{array}{c}{y_{1}}\\{\vdots}\\{y_{n}}\end{array}\right],\quad \beta=\left[\begin{array}{c}{w_{1}}\\{\vdots}\\{w_{p}}\end{array}\right]
 $$
 
 注意这一步的 $\mathbf{A}$ 的每一行代表一个数据 $X_i$，每一行除了最后一列，都是 $X_i$ 的特征，最后一列是 $1$，这是一个小的 trick，因为这样做的话，我们就可以把 $b$ 合并到 $\beta$ 中，也就是：
 
 $$
-\mathbf{A}=\left[\begin{matrix}{X_{1}^{(1)}}&{\dots}&{X_{1}^{(p-1)}}&{1}\\{\vdots}&{\ddots}&{\vdots}&{\vdots}\\{X_{n}^{(1)}}&{\dots}&{X_{n}^{(p-1)}}&{1}\\\end{matrix}\right],\quad \beta=\left[\begin{array}{c}{w_{1}}\\{\vdots}\\{w_{n}}\\{b}\end{array}\right]
+\mathbf{A}=\left[\begin{matrix}{X_{1}^{(1)}}&{\dots}&{X_{1}^{(p-1)}}&{1}\\{\vdots}&{\ddots}&{\vdots}&{\vdots}\\{X_{n}^{(1)}}&{\dots}&{X_{n}^{(p-1)}}&{1}\\\end{matrix}\right],\quad \beta=\left[\begin{array}{c}{w_{1}}\\{\vdots}\\{w_{p-1}}\\{b}\end{array}\right]
 $$
 
 我们可以得到：
@@ -176,9 +176,8 @@ $$
 
 这两个惩罚项的解，具有如下特征：
 
-- **L1 岭回归的正则化项**：$ \lambda \sum_{j=1}^{p} \beta_j^2 $，这是一个L2范数，它对大的系数施加更大的惩罚，导致系数平滑地趋近于零。有些$w$更小。
-  
-- **L2 套索回归的正则化项**：$ \lambda \sum_{j=1}^{p} |\beta_j| $，这是一个L1范数，它对所有系数施加相同的惩罚，这会导致一些系数直接为零，从而产生一个稀疏解。非零$w$更少。
+-   **L1 岭回归的正则化项**：$ \lambda \sum\_{j=1}^{p} \beta_j^2 $，这是一个L2范数，它对大的系数施加更大的惩罚，导致系数平滑地趋近于零。有些$w$更小。
+-   **L2 套索回归的正则化项**：$ \lambda \sum\_{j=1}^{p} |\beta_j| $，这是一个L1范数，它对所有系数施加相同的惩罚，这会导致一些系数直接为零，从而产生一个稀疏解。非零$w$更少。
 
 最终，我们得到广义的线性模型，我们可以考虑任意一种单调可微的函数 $g(.)$：
 
