--- a/Note/04机器学习中的线性回归与分类问题.md
+++ b/Note/04机器学习中的线性回归与分类问题.md
@@ -102,7 +102,7 @@ $$
 
 熵：服从某⼀特定概率分布事件的理论最⼩平均编码长度。
 
-已知一个离散变量 $i$ 的概率分布$P(i)$，我们有熵的公式：
+已知一个离散变量 $i$ 的概率分布 $P(i)$，我们有熵的公式：
 
 $$
 Entropy =-\sum_{n=1}^nP(i)log_2P(i)
@@ -122,9 +122,9 @@ $$
 
 为什么说熵是理论最⼩平均编码长度呢？观察上述式子，我们可以发现，如果我们想让他最小，那么当 $P(i)$ 越大，$-\log_2P(i)$ 就要越小，也就是说，当某个事件发生的概率越大，我们对其编码的长度越短。这就是熵的含义。
 
-举个生活中的例子，就是一个发生概率越大的事件，他往往没有什么有效的信息，如“太阳东升西落”，所以我们对其编码的长度越短，而发生概率越小的事件，他往往包含了更多的信息，如“明天会下雨”，所以我们对其编码的长度就会越长。
+举个生活中的例子，就是一个发生概率越大的事件，他往往没有什么有效的信息，如 “太阳东升西落”，所以我们对其编码的长度越短，而发生概率越小的事件，他往往包含了更多的信息，如 “明天会下雨”，所以我们对其编码的长度就会越长。
 
-接下来，我们定义**交叉熵 (Cross Entropy)**。
+接下来，我们定义 **交叉熵 (Cross Entropy)**。
 
 交叉熵：用来衡量两个概率分布之间的差异的。
 
@@ -211,3 +211,125 @@ $$
 ### 级联的逻辑回归 DNN (Deep Neural Network)
 
 ![image-20240311190708750](./04机器学习中的线性回归与分类问题.assets/image-20240311190708750.png)
+
+## 线性分类器
+
+线性分类器：典型的有参方法，通过学习到的参数来进行预测。
+
+我们不能像排序数组一样硬编码一个算法来解决图像分类问题，因而我们通过机器学习，来找到一个函数 $f(x,W)$，其以输入 $x$ 和模型参数 $W$ 为输入，输出一个预测值 $y$。
+
+![矩阵乘法](04机器学习中的线性回归与分类问题.assets/image.png)
+
+可以看到，$W$ 由 $classes \times features$ 组成，$x$ 由 $features \times 1$ 组成，$b$ 由 $classes \times 1$ 组成。
+
+对于 $W$ 中的每一行，都会与 $x$ 进行乘法，再加上 $b$ 中的对应元素，最后得到一个 $classes \times 1$ 的向量，其中的每个元素都代表了 $x$ 归类为此类的得分。
+
+进一步的，我们就可以得到损失函数：
+
+$$
+L=\frac1N\sum_iL_i(f(x_i,W),y_i)
+$$
+
+其中，$L_i$ 是第 $i$ 个样本的损失函数，$N$ 是样本数量。
+
+对于线性分类器，我们通常使用交叉熵损失函数：
+
+$$
+L_i=-\log\left(\frac{e^{f_{y_i}}}{\sum_je^{f_j}}\right)
+$$
+
+其中，$f_{y_i}$ 是 $f(x_i,W)$ 中的第 $y_i$ 个元素，代表真实分类所对应的得分，而 $f_j$ 是 $f(x_i,W)$ 中的第 $j$ 个元素，总和 $\sum_je^{f_j}$ 是所有分类的得分之和。
+
+关于为什么会得到这个形式，我们做阐述如下：
+
+首先，考虑矩阵乘法，我们得到的可能是个负值，而我们需要输出的是一个概率，所以我们可以通过指数函数来将之转换为正值。也即进行一次 $e^f{x_i,W}$ 操作。
+
+接着，我们还需要保证输出的概率和为 1，所以我们需要对输出的结果进行归一化。也即进行一次 $\frac{e^{f_{x_i,W}}}{\sum_je^{f_j}}$ 操作。
+
+以上的操作，也被称为 **Softmax** 操作。
+
+最后，我们运用之前所学过的交叉熵损失函数，其可以衡量我们的预测概率分布和真实概率分布之间的差异：
+
+$$
+\begin{aligned}
+L_i&=-\log P(Y=y_i|X=x_i)\\
+&=-\log\left(\frac{e^{f_{y_i}}}{\sum_je^{f_j}}\right)
+\end{aligned}
+$$
+
+这在形式上，十分类似于 one-hot 编码的 KL 散度：
+
+$$
+D_{KL}(P||Q)=\sum_yP(y)\log\frac{P(y)}{Q(y)}\\
+$$
+
+整个过程的计算方式如下：
+
+![Softmax](04机器学习中的线性回归与分类问题.assets/image-1.png)
+
+随后，我们就可以通过梯度下降法来优化损失函数了。而最优参数 $W^*$ 就是使得损失函数最小的参数，也就是我们的优化目标。
+
+### 线性分类器的局限性
+
+线性分类器是一个有参方法，和逻辑回归一样，它的决策边界也是线性的。这意味着，如果数据的真实分布不是线性可分的（如异或 XOR），那么线性分类器就无法很好的拟合这个数据。
+
+尽管我们可以通过一些诸如坐标变换的方法来将非线性可分的数据变成线性可分的，但这样的方法往往会增加模型的复杂度。
+
+## 最近邻分类器（Nearest Neighbor Classifier）
+
+最近邻分类器：无参方法，通过计算样本之间的距离来进行预测。
+
+其中，距离的计算方法可以选择：
+
+-   L1（曼哈顿距离）：$d_1(I_1,I_2)=\sum_p|I_1^p-I_2^p|$
+-   L2（欧氏距离）：$d_2(I_1,I_2)=\sqrt{\sum_p(I_1^p-I_2^p)^2}$
+
+这个算法依赖于超参数（Hyperparameters）的选定：
+
+-   k：选择多少个最近的个样本？
+-   距离的计算方法：L1 或 L2？
+
+虽然如此，它也有一个很严重的问题，就是它十分依赖于数据的分布。如果数据的分布不均匀，那么最近邻分类器的效果就会很差。
+
+举个例子，当两张原本一模一样的图，其中一张被左右对称了，那么这两张图的距离就会变得很大，这样的话，最近邻分类器就会将这两张图归为不同的类别。
+
+进一步的，我们思考如何设置超参数：
+
+我们将整个数据集，划分为训练集（Training Set）、测试集（Test Set）和验证集（Validation Set）：
+
+-   训练集：用于训练模型，让模型从数据中学习到特征。训练集通常是整个数据集的大部分，比如 70%~80%。
+
+-   验证集：用于在训练过程中评估模型的性能，并调整超参数。验证集通常占整个数据集的一小部分，比如 10%~15%。
+
+-   测试集：模型训练完成后，在测试集上评估模型的最终性能。测试集通常占整个数据集的 10%~20%，必须是模型从未见过的数据。
+
+当数据集较小的时候，我们还可以通过设置不同的折（Fold）来进行交叉验证（Cross Validation）：将整个数据集划分为 $k$ 个大小相同的子集，每次使用其中的 $k-1$ 个子集来训练模型，剩下的一个子集来验证模型。
+
+## 聚类
+
+聚类：无监督学习的一种，通过将数据集中的样本划分为若干个类别，使得同一类别的样本之间的相似度尽可能大（高类内相似度），不同类别的样本之间的相似度尽可能小（低类间相似度）。
+
+聚类具有主观性。
+
+常用的聚类算法：
+
+-   分割算法
+-   层级算法
+
+### 分割算法（Parttion algorithms）
+
+分割算法：把 $n$ 个对象分割成 $K$ 个簇（Clusters），使得每个对象属于且仅属于一个组。
+
+目标：最优化某个选定分割标准的 $K$ 组分割。
+
+**K-means** 是一种常用的聚类算法，旨在将数据集分成 K 个簇，使得同一个簇内的数据点之间距离尽可能小，而不同簇之间的数据点距离尽可能大。算法步骤如下：
+
+1. 随机选择 K 个数据点作为初始簇中心。
+2. 将每个数据点分配给最近的簇中心，形成 K 个簇。
+3. 重新计算每个簇的中心，即每个簇内所有数据点的均值。
+4. 重复步骤 2 和 3，直到簇中心不再变化或变化非常小。
+
+问题：
+
+1. 对于种子的选择敏感，需要尝试不同的初始种子，且尽量让 $k$ 个初始种子互相远离。
+2. 受离群值（Outliers）影响较大。
