--- a/Note/03机器学习介绍与线性模型.md
+++ b/Note/03机器学习介绍与线性模型.md
@@ -14,7 +14,7 @@
 
 线性回归：给定数据 $D = \{(x_1, y_1), (x_2, y_2), \ldots, (x_n, y_n)\}$, 用一个线性模型估计最接近真实 (y) (ground truth) 的连续标量: $f(x_i)=w^T \cdot x_i + b$， 也就是要 $f(x_i) \approx y_i$
 
-(w, b) 是要学习的模型参数.
+$(w, b)$ 是要学习的模型参数.
 
 也就是要：
 
@@ -30,7 +30,7 @@ $$
 
 这也被称为 Empirical mean（经验均值）。
 
-其中，n 是数据的数量，$x_i$ 是第 i 个数据的全部特征，$y_i$ 是第 i 个数据的真实值，$f(x_i)$ 是第 i 个数据的预测值。
+其中，$n$ 是数据的数量，$x_i$ 是第 i 个数据的全部特征，$y_i$ 是第 i 个数据的真实值，$f(x_i)$ 是第 i 个数据的预测值。
 
 根据大数定理，当数据量足够大时，经验均值会趋近于期望，也就是：
 
@@ -74,11 +74,8 @@ $$
 $$
 \begin{aligned}
 J(\beta) &= ( \mathbf{A} \beta-\mathbf{Y} )^{\mathrm{T}} ( \mathbf{A} \beta-\mathbf{Y} ) \\
-
 &= \beta^{\mathrm{T}} \mathbf{A}^{\mathrm{T}} \mathbf{A} \beta-2 \beta^{\mathrm{T}} \mathbf{A}^{\mathrm{T}} \mathbf{Y}+\mathbf{Y}^{\mathrm{T}} \mathbf{Y}\\
-
 \quad \frac{\partial J(\beta)}{\partial \beta} &= 2 \mathbf{A}^{\mathrm{T}} \mathbf{A} \beta-2 \mathbf{A}^{\mathrm{T}} \mathbf{Y} = 0 \\
-
 \end{aligned}
 $$
 
@@ -92,7 +89,7 @@ $$
 
 所以，我们可以通过梯度下降法来求解最优的 $\beta$。
 
-![image-20240307162044682](./03机器学习介绍与线性模型.assets/image-20240307162044682.png)
+![image-20240307162044682](03机器学习介绍与线性模型.assets/image-20240307162044682.png)
 
 梯度下降法的思想是：从随机选取的 $\beta$ 开始，每次沿着梯度的反方向走一步（走的多长由学习率 Learning Rate 决定），直到收敛。只要这个损失函数是凸函数，我们总能优化到最优点。
 
@@ -100,7 +97,6 @@ $$
 
 $$
 \begin{aligned}&\max_{\beta}p(D|\beta)p(\beta)=\max_{\beta}\log p(D|\beta)+\log p(\beta)\\\\
-
 &\hat{\beta}_{\mathrm{MAP}}=arg\max_{\beta}\underbrace{\log p\left(\{(X_i,Y_i)\}_{i=1}^n\mid\beta,\sigma^2\right)}_{\log\text{likelihood}} + \underbrace { l o g p \left ( \beta \right )}_{\log\text{prior}} \end{aligned}
 $$
 
@@ -147,7 +143,7 @@ $$
 
 这个式子的一个直观理解，就是假设 $\beta$ 是一个二维的，那么我们可以可视化这个分布：
 
-![image-20240307185459294](./03机器学习介绍与线性模型.assets/image-20240307185459294.png)
+![image-20240307185459294](03机器学习介绍与线性模型.assets/image-20240307185459294.png)
 
 那么在这个图中，任意一个点都代表一个高斯分布，而 $f(x_1,x_2)$ 就是这个点的概率密度。我们可以看到，这个分布是关于原点对称的，这也是 $p(\beta)$ 中的 $\beta^T\beta$ 的作用，这代表了我们对于变量的顺序是没有偏好的。
 
@@ -187,6 +183,6 @@ $$
 
 其中，$g(.)$ 是激活函数，它的作用是将线性模型的输出转换为我们想要的输出，也即将线性模型的输出转换为一个非线性的预测值。比如，当 $g(.)$ 是恒等函数时，我们就得到了线性回归；当 $g(.)$​ 是 sigmoid 函数时，我们就得到了逻辑回归。
 
-![image-20240307193801046](./03机器学习介绍与线性模型.assets/image-20240307193801046.png)
+![image-20240307193801046](03机器学习介绍与线性模型.assets/image-20240307193801046.png)
 
 在这个图中，$g$ 就是 $log$ 函数，而对应的 $g^{-1}$ 就是 $e^x$ 指数函数。通过这个变换，我们将一个线性的 $y'= (w^Tx+b)$ 变换得到了非线性的 $y$。
