--- a/Note/04机器学习中的线性回归与分类问题.md
+++ b/Note/04机器学习中的线性回归与分类问题.md
@@ -210,7 +210,7 @@ $$
 
 ### 级联的逻辑回归 DNN (Deep Neural Network)
 
-![image-20240311190708750](./04机器学习中的线性回归与分类问题.assets/image-20240311190708750.png)
+![image-20240311190708750](https://cdn.arthals.ink/bed/2024/03/neuron-515f7ecbf9403a243bb103f403e1c33f.png)
 
 ## 线性分类器
 
@@ -218,7 +218,7 @@ $$
 
 我们不能像排序数组一样硬编码一个算法来解决图像分类问题，因而我们通过机器学习，来找到一个函数 $f(x,W)$，其以输入 $x$ 和模型参数 $W$ 为输入，输出一个预测值 $y$。
 
-![矩阵乘法](04机器学习中的线性回归与分类问题.assets/image.png)
+![矩阵乘法](https://cdn.arthals.ink/bed/2024/03/bias-53d8104351c3fc4b0df0f02b37661a77.png)
 
 可以看到，$W$ 由 $classes \times features$ 组成，$x$ 由 $features \times 1$ 组成，$b$ 由 $classes \times 1$ 组成。
 
@@ -265,7 +265,7 @@ $$
 
 整个过程的计算方式如下：
 
-![Softmax](04机器学习中的线性回归与分类问题.assets/image-1.png)
+![Softmax](https://cdn.arthals.ink/bed/2024/03/mlp-c58ede3984dd3856c644ff2a69817a3b.png)
 
 随后，我们就可以通过梯度下降法来优化损失函数了。而最优参数 $W^*$ 就是使得损失函数最小的参数，也就是我们的优化目标。
 
