--- a/Note/03机器学习介绍与线性模型.md
+++ b/Note/03机器学习介绍与线性模型.md
@@ -89,7 +89,7 @@ $$
 
 所以，我们可以通过梯度下降法来求解最优的 $\beta$。
 
-![image-20240307162044682](03机器学习介绍与线性模型.assets/image-20240307162044682.png)
+![image-20240307162044682](./03机器学习介绍与线性模型.assets/image-20240307162044682.png)
 
 梯度下降法的思想是：从随机选取的 $\beta$ 开始，每次沿着梯度的反方向走一步（走的多长由学习率 Learning Rate 决定），直到收敛。只要这个损失函数是凸函数，我们总能优化到最优点。
 
@@ -143,11 +143,11 @@ $$
 
 这个式子的一个直观理解，就是假设 $\beta$ 是一个二维的，那么我们可以可视化这个分布：
 
-![image-20240307185459294](03机器学习介绍与线性模型.assets/image-20240307185459294.png)
+![image-20240307185459294](./03机器学习介绍与线性模型.assets/image-20240307185459294.png)
 
 那么在这个图中，任意一个点都代表一个高斯分布，而 $f(x_1,x_2)$ 就是这个点的概率密度。我们可以看到，这个分布是关于原点对称的，这也是 $p(\beta)$ 中的 $\beta^T\beta$ 的作用，这代表了我们对于变量的顺序是没有偏好的。
 
-带入进行复杂的数学推导后，我们就可以得到：
+带入进行复杂的数学推导 [^1] 后，我们就可以得到：
 
 $$
 \hat{\beta}_{\mathbf{MAP}}=arg\min\sum_{i=1}^n(Y_i-X_i\beta)^2+\lambda\parallel\beta\parallel_2^2
@@ -183,6 +183,50 @@ $$
 
 其中，$g(.)$ 是激活函数，它的作用是将线性模型的输出转换为我们想要的输出，也即将线性模型的输出转换为一个非线性的预测值。比如，当 $g(.)$ 是恒等函数时，我们就得到了线性回归；当 $g(.)$​ 是 sigmoid 函数时，我们就得到了逻辑回归。
 
-![image-20240307193801046](03机器学习介绍与线性模型.assets/image-20240307193801046.png)
+![image-20240307193801046](./03机器学习介绍与线性模型.assets/image-20240307193801046.png)
 
 在这个图中，$g$ 就是 $log$ 函数，而对应的 $g^{-1}$ 就是 $e^x$ 指数函数。通过这个变换，我们将一个线性的 $y'= (w^Tx+b)$ 变换得到了非线性的 $y$。
+
+## Reference
+
+[^1]: [L1，L2 正则化的理解](https://hellojialee.github.io/2020/01/28/L1%E5%92%8CL2%E6%AD%A3%E5%88%99%E5%8C%96%E7%9A%84%E7%90%86%E8%A7%A3/)
+
+关于最大化高斯分布的后验概率等价于最小化二阶范数的具体推导，还有一个由 GPT4 生成的推导过程：
+
+> 在高斯分布下，假设权重 $w$ 遵循均值为0，方差为 $\sigma^2$ 的正态分布，即 $w \sim \mathcal{N}(0, \sigma^2)$。那么权重的概率密度函数（PDF）为：
+>
+> $$
+> P(w) = \frac{1}{\sqrt{2\pi\sigma^2}}\exp\left(-\frac{w^2}{2\sigma^2}\right)
+> $$
+>
+> 取对数得到：
+>
+> $$
+> \log P(w) = \log\left(\frac{1}{\sqrt{2\pi\sigma^2}}\right) - \frac{w^2}{2\sigma^2}
+> $$
+>
+> 因为第一项 $\log\left(\frac{1}{\sqrt{2\pi\sigma^2}}\right)$ 是常数，对于优化问题，我们只考虑影响模型参数 $w$ 的项，所以可以忽略它。因此，我们只关注第二项：
+>
+> $$
+> -\frac{w^2}{2\sigma^2}
+> $$
+>
+> 在机器学习中，我们通常使用代价函数（或损失函数）来训练模型。假设我们的代价函数为 $J(w)$，为了使 $w$ 接近于高斯分布，我们可以在代价函数中增加对数先验 $\log P(w)$，即：
+>
+> $$
+> J'(w) = J(w) - \lambda \log P(w)
+> $$
+>
+> 其中 $\lambda$ 是正则化参数。将 $\log P(w)$ 代入上式得到：
+>
+> $$
+> J'(w) = J(w) + \lambda \frac{w^2}{2\sigma^2}
+> $$
+>
+> 我们可以看到这里的 $\lambda \frac{1}{2\sigma^2}$ 起到了正则化系数的作用。这个正则化项是 $w$ 的平方，即 $L2$ 正则项。通常我们将 $L2$ 正则化系数表示为 $\alpha = \lambda \frac{1}{2\sigma^2}$，所以代价函数可以写为：
+>
+> $$
+> J'(w) = J(w) + \alpha w^2
+> $$
+>
+> 这显示了在高斯分布下 $\log P(w)$ 的效果等价于在代价函数中增加 $L2$ 正则项。这种正则化有时也被称为权重衰减，它鼓励模型学习更小的权重，从而可以提高模型的泛化能力，防止过拟合。
