--- a/Note/05神经网络基础.md
+++ b/Note/05神经网络基础.md
@@ -6,17 +6,15 @@
   blog: <a href="https://arthals.ink">Arthals' ink</a>
 </center>
 
-## 神经网络的基本概念
+## 神经元模型
 
-### 神经元模型
+![neuron](./05神经网络基础.assets/neuron.png)
 
-![neuron](https://cdn.arthals.ink/bed/2024/03/neuron-515f7ecbf9403a243bb103f403e1c33f.png)
-
-神经元模型是神经网络的基本单元，它接收输入信号，对输入信号进行 **加权求和**，权重 / 参数（weight/parameter）的绝对值越大，则代表对应的输入 $x$ 对输出影响越大，然后通过激活函数处理，最后输出结果。
+神经元模型是神经网络的基本单元，它接收输入信号，对输入信号进行 **加权求和** ，权重 / 参数（weight/parameter）的绝对值越大，则代表对应的输入 $x$ 对输出影响越大，然后通过激活函数处理，最后输出结果。
 
 基于向量相乘的实现，分为列格式和行格式：
 
-#### 列格式
+### 列格式
 
 $$
 \begin{aligned}
@@ -29,7 +27,7 @@ $$
 
 在这种格式下，$x$ 的每个分量都是一个特征，$w$ 的每个分量都是对应特征的权重。$z$ 是一个标量。
 
-#### 行格式
+### 行格式
 
 $$
 \begin{aligned}
@@ -46,9 +44,9 @@ $$
 
 当然，我们也可以再加上偏置（bias） $b$，来增加模型的表达能力（改变原先必然过圆心的决策边界）：
 
-![bias](https://cdn.arthals.ink/bed/2024/03/bias-53d8104351c3fc4b0df0f02b37661a77.png)
+![bias](./05神经网络基础.assets/bias.png)
 
-### 激活函数
+## 激活函数
 
 激活函数（activation function）：对神经元的输出进行非线性变换，提供⾮线性性（non-linearity），增加神经网络的表达能力。
 
@@ -70,13 +68,13 @@ $$
     -   公式：$f(x_i)=\frac{e^{x_i}}{\sum_{j=1}^n e^{x_j}}$
     -   映射关系：$(-\infty,+\infty) \rightarrow (0,1)$，输出值在 0 到 1 之间，用以表示概率，使得所有激活值之和为 1
 
-### 多层感知器（Multi-Layer Perceptron, MLP）
+## 多层感知器（Multi-Layer Perceptron, MLP）
 
-多层感知器是一种前馈神经网络，它由 **输入层**、**隐藏层**和**输出层** 组成。
+多层感知器是一种前馈神经网络，它由 **输入层** 、 **隐藏层** 和 **输出层** 组成。
 
 相较于单层感知器的线性决策边界，多层感知器通过将多个单层感知器叠加，后一个层将原有层的输出值当做特征值来学习，也就是 “在原有特征的基础上，再次进行特征提取（变换）”，从而具有更好的表达能力。这能更好的解决现实中更复杂的问题。
 
-![mlp](https://cdn.arthals.ink/bed/2024/03/mlp-c58ede3984dd3856c644ff2a69817a3b.png)
+![mlp](./05神经网络基础.assets/mlp.png)
 
 **注意，$a$ 代表的是激活函数的输出，之前的 $z$ 代表的是加权求和的结果。$a = f(z)$**
 
@@ -89,13 +87,13 @@ $$
 
 多层感知器可以进一步抽象成 Encoder-Decoder 模型，其中 Encoder 用于提取特征，Decoder 用于还原数据。
 
-![encoder-decoder](https://cdn.arthals.ink/bed/2024/03/encoder-decoder-e4bf3f573ca28fb7681bbe7e17b82a35.png)
+![encoder-decoder](./05神经网络基础.assets/encoder-decoder.png)
 
 这个模型后续会在 RNN 和 Seq2Seq 中有所体现。现今大火的 Diffusion Model 也正是基于这个思想来设计的。在当前学习的全连接 MLP 中，我们可以简单的认为除输出层外的所有层都是 Encoder，输出层是 Decoder。
 
-### 损失函数
+## 损失函数
 
-损失函数（loss function）：用来量化网络预测的输出（predicted output）和给定训练数据输出（ground truth）之间的 **误差 (error，也称 loss value)**。
+损失函数（loss function）：用来量化网络预测的输出（predicted output）和给定训练数据输出（ground truth）之间的 **误差 (error，也称 loss value)** 。
 
 损失函数用来设定优化神经网络参数（如权重、偏置）的目标。
 
@@ -115,7 +113,7 @@ $$
 
 这里的 $P(Y=y_i|X=x_i)$ 是指在给定输入 $x_i$ 的情况下，输出 $y_i$ 的概率。这个概率是由神经网络给出的，也就是 $P(Y=y_i|X=x_i)=f(x_i)$，其中 $f$ 是神经网络的输出函数。
 
-#### 回归问题：均方误差损失函数（mean squared error loss function）
+### 回归问题：均方误差损失函数（mean squared error loss function）
 
 $$
 \mathcal{L} = y\log(a) + (1 - y)\log(1 - a)\\
@@ -168,7 +166,7 @@ $$
 >
 > 这就是逻辑回归中常用的损失函数，也称为对数损失（Log Loss）或交叉熵损失（Cross-Entropy Loss）。
 
-#### 分类问题：交叉熵损失函数（cross-entropy loss function）
+### 分类问题：交叉熵损失函数（cross-entropy loss function）
 
 公式是：
 
@@ -188,7 +186,7 @@ $$
 
 第一个式子为单个样本的损失函数，第二个式子为多个样本的损失函数。
 
-### L 范数
+## L 范数
 
 $$
 ||x||_L = \left( \sum_{i=1}^n |x_i|^L \right)^{\frac{1}{L}}
@@ -197,13 +195,13 @@ $$
 -   $L=1$ 时，称为 L1 范数，MAE（Mean Absolute Error，平均绝对误差）。用于衡量两个向量之前差别的大小
 -   $L=2$ 时，称为 L2 范数，MSE（Mean Squared Error，均方误差）。⽤来衡量⽹络输出值 $a$ 和训练数据输出值 $y$ 的差别（MAE 也可以，区别在于 L2 范数对异常值更敏感）
 
-### 优化
+## 优化
 
 目的：给定网络 $f(x;\theta)$ 和损失函数 $L$ ，以获得好的参数 $\theta$，最小化损失函数 $\mathcal{L}$。
 
 最常用的优化方法是梯度下降（gradient descent）。梯度下降的思想是通过不断迭代来更新参数，使得损失函数最小化。
 
-#### 梯度下降
+### 梯度下降
 
 $$
 w_j:=w_j-\alpha\frac{\partial\mathcal{L}}{\partial w_j}\quad w=[w_1,w_2,...]
@@ -214,7 +212,7 @@ $$
 -   $w_j$ 称为权重（weight），$j$ 代表权重的索引
 -   $w$ 称为权重向量（weight vector）
 
-![gradient_descent](https://cdn.arthals.ink/bed/2024/03/gradient_descent-b73c83420d33de3378c892d90822f0e0.png)
+![gradient_descent](./05神经网络基础.assets/gradient_descent.png)
 
 在更高的维度，可能无法很好的可视化这个过程，但是其思想是一样的。
 
@@ -224,7 +222,7 @@ $$
 \boldsymbol{\theta}:=\boldsymbol{\theta}-\alpha\frac{\partial\mathcal{L}}{\partial\boldsymbol{\theta}}
 $$
 
-#### 误差反向传播
+### 误差反向传播
 
 误差反向传播（Backpropagation，BP）是一种用于训练神经网络的方法，其就是梯度下降的思想的具体实现。
 
@@ -232,11 +230,11 @@ $$
 
 利用这个中间结果 $\delta$ ，我们可以计算损失函数对于每个参数 $\theta$ 的偏导数 $\frac{\partial L}{\partial \theta}$，即最终我们需要的梯度。进而通过这个梯度，我们可以调整参数 $\theta$ 来减少整个网络的损失。
 
-![backpropagation](https://cdn.arthals.ink/bed/2024/03/backpropagation-9b5084997378e853a5c962b49ef11985.png)
+![backpropagation](./05神经网络基础.assets/backpropagation.png)
 
 图中展示了一个简化的神经网络结构，包含输入层、多个隐藏层和输出层。每一层都有多个神经元（用 $a$ 表示），它们之间通过权重（即参数 $\theta$）相连。在训练过程中，我们首先正向传播输入信号，然后根据输出和实际值计算损失，最后通过反向传播算法来更新权重，以此循环直至模型训练完成。
 
-#### 梯度消失（Gradient Vanish）/梯度爆炸（Gradient Explode） 问题
+### 梯度消失（Gradient Vanish）/ 梯度爆炸（Gradient Explode） 问题
 
 在深度神经网络中，梯度消失和梯度爆炸是一个常见的问题。这是因为在反向传播过程中，梯度会随着层数的增加而指数级的减小或增大。
 
@@ -253,11 +251,11 @@ $$
 
 为了解决这个问题，我们可以使用 ReLU 函数，它的导数在 $x>0$ 时为 1，这样可以避免梯度消失的问题。
 
-#### 随机梯度下降（Stochastic Gradient Descent, SGD）
+### 随机梯度下降（Stochastic Gradient Descent, SGD）
 
 到现在为止，我们所说的梯度下降（GD）都是基于整个数据集的。然而，当数据集非常大时，计算整个数据集的梯度是非常耗时的（非常昂贵的）。
 
-在梯度下降的基础上，后来提出的随机梯度下降是一种更高效的优化方法。它不是在整个数据集上计算梯度，而是在每次迭代中**随机选择一批数据（mini-batch）来计算梯度**。
+在梯度下降的基础上，后来提出的随机梯度下降是一种更高效的优化方法。它不是在整个数据集上计算梯度，而是在每次迭代中 **随机选择一批数据（mini-batch）来计算梯度** 。
 
 为什么可以这么做？原因如下：
 
@@ -301,7 +299,7 @@ $$
 >
 > 当然，SGD 也有它的缺点，比如可能会陷入局部最优解等等，我们会在后文中介绍其他的 SGD 变种，如 RMSprop、Adam 等。
 
-#### 学习率调度
+### 学习率调度
 
 学习率是梯度下降算法中的一个重要超参数，它决定了参数更新的速度。学习率太大会导致参数更新过快，从而错过最优解；学习率太小会导致参数更新过慢，从而训练时间过长。
 
@@ -309,15 +307,42 @@ $$
 
 学习率调度的常见方法有：
 
-##### RMSprop
+#### Adagrad（Adaptive Gradient）
 
-RMSprop 是一种自适应学习率方法。公式如下：
+Adagrad 是一种自适应学习率调整方法，它可以针对每个参数调整学习率，特别适合处理稀疏数据。Adagrad 的更新规则如下：
+
+$$
+G_{t} = G_{t-1} + \nabla_{\theta}J(\theta)^2
+$$
+
+$$
+\theta_{t+1} = \theta_t - \frac{\eta}{\sqrt{G_t + \epsilon}} \cdot \nabla_{\theta}J(\theta)
+$$
+
+其中：
+
+-   $G_t$ 是到目前为止所有梯度平方的累加
+-   $\epsilon$ 是一个小的平滑项，防止分母为零
+-   $\eta$ 是初始学习率
+
+Adagrad 的关键优点是不需要手动调整学习率，由于 $G_t$ 不断累加，它能先快后慢地自动进行调整学习率。然而，它也存在一个缺点，随着训练的进行，$G_t$ 会不断累加，导致学习率趋于零，使得训练在后期几乎不再更新参数。
+
+#### RMSprop
+
+RMSprop 是一种改进自 Adagrad 的自适应学习率方法。公式如下：
 
 $$
 v_{t} = \beta v_{t-1} + (1 - \beta)\nabla_{\theta}J(\theta)^2
 $$
 
-其中，$v_t$是梯度平方的指数移动平均，$\beta$是衰减率，用于控制历史信息保留的多少，$\nabla_{\theta}J(\theta)$是当前梯度，$J(\theta)$是损失函数。RMSprop 通过除以$v_t$来调整每一步的学习率，使得学习率逐渐减小。
+其中：
+
+-   $v_t$ 是梯度平方的指数移动平均
+-   $\beta$ 是衰减率，用于控制历史信息保留的多少
+-   $\nabla_{\theta}J(\theta)$ 是当前梯度
+-   $J(\theta)$ 是损失函数。
+
+RMSprop 通过除以 $v_t$ 来调整每一步的学习率，使得学习率逐渐减小。
 
 在获得 $v_t$ 后，我们以如下式子对参数进行更新：
 
@@ -325,42 +350,95 @@ $$
 \theta_{t+1} = \theta_t - \frac{\eta}{\sqrt{v_t + \epsilon}} \cdot \nabla_{\theta}J(\theta)
 $$
 
-##### Adagrad
+与 Adagrad 不同，RMSprop 通过指数移动平均的方式来调整学习率，以丢弃遥远的梯度历史信息（让距离当前越远的梯度的缩减学习率的权重越小），从而使得学习率不会过早降低，从而更好地适应训练数据。
 
-Adagrad 方法会针对每个参数调整学习率。公式如下：
+#### Adam（Adaptive Moment Estimation）
 
-$$
-\theta_{t+1} = \theta_t - \frac{\eta}{\sqrt{G_t + \epsilon}} \cdot \nabla_{\theta}J(\theta)
-$$
-
-$G_t$是到目前为止所有梯度平方的累加，$\eta$是学习率，$\epsilon$是一个很小的数，防止分母为零。Adagrad 通过$G_t$来调整每个参数的学习步长，对于出现频率高的特征，学习率会降低。
-
-##### Adam
-
-Adam 结合了 Momentum 和 RMSprop 的思想。公式如下：
+为了克服 Adagrad 在训练后期学习率过小的问题，Adam 算法被提出。Adam 同时考虑了梯度的一阶矩（即梯度本身）和二阶矩（即梯度的平方）的指数移动平均，其更新规则如下：
 
 $$
-\theta_{t+1} = \theta_t - \frac{\eta}{\sqrt{\hat{v}_t} + \epsilon} \cdot \hat{m}_t
+m_t = \beta_1 m_{t-1} + (1 - \beta_1)\nabla_{\theta}J(\theta)
 $$
 
-$\hat{m}_t$是梯度的一阶矩估计（均值），$\hat{v}_t$是二阶矩估计（未开根号的方差），$\eta$是学习率。Adam 通过计算矩估计来调整学习率，使其更稳定和快速。
-
-##### AMSGrad
-
-AMSGrad 是对 Adam 的改进，以防止学习率过快下降。公式如下：
-
 $$
-v_{t}^{hat} = max(v_{t-1}^{hat}, v_t)
+v_t = \beta_2 v_{t-1} + (1 - \beta_2)\nabla_{\theta}J(\theta)^2
 $$
 
-$v_{t}^{hat}$是修正后的二阶矩估计。AMSGrad 通过取之前所有时刻$v_t$的最大值来更新$v_{t}^{hat}$，确保学习率不会因为$v_t$的减小而减小。
-
-##### AdaBound
-
-AdaBound 也是对 Adam 的改进，旨在控制学习率的边界。公式如下：
-
 $$
-\theta_{t+1} = \theta_t - \frac{\eta}{\sqrt{v_t} + \epsilon} \cdot m_t
+\hat{m}_t = \frac{m_t}{1 - \beta_1^t}
 $$
 
-AdaBound 通过限制学习率的变化，使其在一定范围内动态变化，促进训练过程的稳定性。
+$$
+\hat{v}_t = \frac{v_t}{1 - \beta_2^t}
+$$
+
+$$
+\theta_{t+1} = \theta_t - \frac{\eta}{\sqrt{\hat{v}_t + \epsilon}} \cdot \hat{m}_t
+$$
+
+其中：
+
+-   $m_t$ 和 $v_t$ 分别是梯度的一阶矩和二阶矩的指数移动平均
+-   $\beta_1$ 和 $\beta_2$ 是衰减率，通常接近 1
+-   $\hat{m}_t$ 和 $\hat{v}_t$ 是对 $m_t$ 和 $v_t$ 的偏差校正，以便在训练初期得到更准确的估计
+-   $\eta$ 是学习率
+
+Adam 结合了 RMSprop 和 Momentum 的优点，不仅自适应调整每个参数的学习率，还能利用梯度的一阶矩信息加速训练，在实际应用中表现良好。
+
+如果你对动量 Momentum 不熟悉，可以参考 [这篇文章](https://distill.pub/2017/momentum/)。
+
+### 超参数优化
+
+超参数选择（Hyper-Parameter Selection）的主要目的是找到一个合适的模型 $f(x; \theta)$，使其**在训练数据集上不过拟合（overfit），同时在测试数据集上能很好地泛化（generalize）。**
+
+**超参数**包括网络层数、神经元数、激活函数、批大小、训练 epoch 数等，对模型性能有重要影响。
+
+三个数据集的区别：
+
+-   训练数据集（Training Data）用于训练模型
+-   验证数据集（Validation Data）用于评估和比较不同超参数组合对应的模型性能，并选择性能最佳的超参数
+-   测试数据集（Test Data）用于最终评估选定的模型性能。**不能用测试集来验证超参数性能，这是作弊。** 因为其会导致模型过拟合测试数据。
+
+交叉验证（Cross Validation）是一种常用的超参数选择方法。它将数据分成多个子集，每次用其中一个子集作为验证集，其余作为训练集，遍历所有子集组合，从而避免了使用单一的验证集可能带来的偏差。
+
+## 正则化
+
+Motivation：解决过拟合（Overfitting）。
+
+过拟合指的是模型在训练数据上表现很好，但在测试数据上表现很差。其原因是模型过于复杂，导致模型在训练数据上学习到了噪声，而不是真正的模式。也即，当我们的模型参数过多，超过样本数量时，模型就会过拟合。
+
+为了解决过拟合问题，我们可以使用正则化（Regularization）方法。其思想是，我们对于损失函数添加一个惩罚项，从而限制模型的复杂度，使其更容易泛化到未见过的数据。
+
+### 提前停止法（Early Stopping）
+
+在训练过程中，我们不断地监控验证集的损失，当验证集的损失不再下降时，我们停止训练，从而避免模型过拟合。
+
+![early-stopping](./05神经网络基础.assets/early-stopping.png)
+
+### 权重衰减（Weight Decay）
+
+权重衰减是一种常用的正则化方法，其思想是通过在损失函数中添加损失项来限制权重的大小，从而减少模型的复杂度。
+
+$$
+\mathcal{L}_{total} = \mathcal{L} + \lambda ||{W}||
+$$
+
+权重衰减只用于权重 weight，不用于偏置 bias。
+
+#### L1 vs L2 正则化
+
+![L1-vs-L2](./05神经网络基础.assets/L1-vs-L2.png)
+
+L1 对小的数值产生的惩罚比 L2 要大，因此（参数小于 1 时，其梯度更大）L1 正则化会使得模型更加稀疏，此称之为 **稀疏特性**，即更多的参数为 0。L2 正则化则会使得模型的参数更加平滑。
+
+与之相反的，L2 不会产生稀疏解，所有参数都会被缩小但不会变成零。
+
+### Dropout
+
+Dropout 是一种随机正则化方法，其思想是，因为包含大量神经元的神经网络使其很容易过拟合，所以可以在训练过程中随机丢弃一部分神经元（对隐藏输出置 0），从而减少模型的复杂度，防止过拟合。
+
+具体来说，Dropout 会以概率 $p$ 随机丢弃一部分神经元，其余神经元的输出乘以 $\frac{1}{1-p}$，从而保持其期望值不变。
+
+![dropout](./05神经网络基础.assets/dropout.png)
+
+测试/正常使用的时候，不再随机置 0 的原因：确保模型的输出稳定且充分利用训练时学到的所有信息。
